[tool.poetry]
name = "repl_python3_Discord-Account-Recovery-Helper"
version = "0.1.0"
description = ""
authors = ["TheUnsocialEngi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
sendmail = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
